--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,10 @@
 				var num = document.getElementById("n1");
 				num.value = Math.pow(num.value, 3);
 			}
+			function grade4() {
+				var num = document.getElementById("n1");
+				num.value = Math.pow(num.value, 4);
+			}
 		</script>
 	</head>	
 	<body>
@@ -16,5 +20,6 @@
 		Number:
 		<input type="text" id="n1"><p>
 		<button onclick="cube()"> x^3 </button>
+		<button onclick="grade4()"> x^4 </button>
 	</body>
 </html>
